--- a/src/app/components/main-body/main-body.scss
+++ b/src/app/components/main-body/main-body.scss
@@ -152,15 +152,19 @@
 ::ng-deep .mat-mdc-tab-body-wrapper {
   flex: 1;
   min-height: 0;
+  overflow: hidden;
 }
 
 ::ng-deep .mat-mdc-tab-body {
   height: 100%;
+  overflow: hidden;
 }
 
 ::ng-deep .mat-mdc-tab-body-content {
   height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .tab-label-text {
